--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TeacherERP">
@@ -18,10 +19,7 @@
             android:name=".SignUpActivity"
             android:exported="true" />
         <activity
-            android:name=".FragmentPreAttendence"
-            android:exported="true" />
-        <activity
-            android:name=".AttendenceActivity"
+            android:name=".AttendanceActivity"
             android:exported="true" />
         <activity
             android:name=".LoginActivity"
