--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.teachererp">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TeacherERP">
+        android:theme="@style/Theme.TeacherERP"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".Admin"
+            android:exported="false" />
+        <activity
+            android:name=".AddTeacherSubject"
+            android:exported="false" />
         <activity
             android:name=".UserProfile"
             android:exported="true" />
